Fixed all alignment, Completed the register page, Added text

--- a/maideasy.html
+++ b/maideasy.html
@@ -13,6 +13,7 @@
         <link href="./css/contact.css" rel="stylesheet"/>
         <link href="./css/services.css" rel="stylesheet"/>
         <link href="./css/signup.css" rel="stylesheet"/>   
+        <link href="./css/register.css" rel="stylesheet"/>
     </head>
 	<body>
         <div>
@@ -87,10 +88,15 @@
             <div class = "outer">
                 <div class = "row1">
                     <div class ="column1">
-                        <p>About Us text</p>
+                        <p class = "TextToBeWritten"><h3 style="color:white;font-size: x-large;margin-left: 215px;">About Us</h3>
+                            <p class = "TextToBeWritten">Utilizing a maid service may be considered due to a number of personal factors, including but not limited
+                            to geographical location, social standing, lack of personal time, lack of experience. There are many reasons
+                            why individuals may consider hiring help around the house, especially with cleaning. It may, for example, 
+                            prove easier for them to enjoy time with their family rather than spending time cleaning.</p>
+                        </p>
                     </div>
                     <div class ="column1">
-                        <p>image gonna go up here</p>        
+                        <img src = "img/aboutus.jpg" style ="position: absolute;border-radius:10px;height:330px;width:530px;margin-top:55px;margin-left:25px">       
                     </div>
                 </div>
             </div>
@@ -144,24 +150,68 @@
         <!-- End of services -->
 
         <!-- Register -->
-        <div class = "block" id = "register">
-            <!-- <div class="input-img">
-                <img src="./test.jpg" alt="Add image here">
-                <h2 class="heading">REGISTER</h2>
-                <br><br>
-                <div class="input-fields">
-                    <label for ="name" class="labels">NAME  </label><input type="text" id="name"><br><br><br>
-                    <label for ="email"class="labels">EMAIL </label><input type="email" id="email"><br><br><br>
-                    <label for ="type" class="labels"> TYPE </label><input type="text" id="type"><br><br>
-                </div>  
-                <br><br><br><br>
-                <div >
-                    <button type="submit" id="register-button">
-                        Submit
-                    </button>
+        <div class = "block parallaxr" id = "register" >
+            <div class="container" style="height: 100vh;width:100vw;">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="title-box text-left" style="margin-top: 100px;">
+                            <h3 class="title-a" style="color:white;font-size: x-large;">
+                            Register
+                            </h3>
+                            <p class="subtitle-a" style="color:white;">
+                            We are what we provide and we provide the best.
+                            </p>
+                            <div class="line-mf"></div>
+                        </div>
+                    </div>
                 </div>
-            </div> -->
-        </div> 
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="service-box">
+                            <div>
+                                <span><img src = "img/apartment.jpg" style="border-radius: 25px; position:absolute; height:133px;width:200px;margin-left: 50px;"></span>
+                        </div>
+                            <div class="service-content">
+                                <h2 class="s-title">Apartments</h2>
+                                <p class="s-description text-justify">
+                                        An apartment, flat or unit is a self-contained housing unit that occupies only part of a 
+                                        building, generally on a single storey. 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="service-box">
+                            <div>
+                                <span><img src = "img/gated.jpg" style="border-radius: 25px; position:absolute; height:133px;width:200px;margin-left: 50px;"></span>
+                            </div>
+                            <div class="service-content">
+                                <!-- <img src = "img/independent1.jpg"> -->
+                                <h2 class="s-title">Gated Communities</h2>
+                                <p class="s-description text-justify">
+                                        In its modern form, a gated community is a form of residential community or housing estate
+                                        containing strictly controlled entrances for pedestrians. 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="service-box">
+                            <div>
+                                <span><img src = "img/independent1.jpg" style="border-radius: 25px; position:absolute; height:133px;width:200px;margin-left: 50px;"></span>
+                            </div>
+                            <div class="service-content">
+                                <h2 class="s-title">Independent House</h2>
+                                <p class="s-description text-justify">
+                                        A home, or domicile, is a living space used as a permanent or semi-permanent residence for 
+                                        an individual, family, household or several families. 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </div>
+
         <!-- End of Register -->
 
         <div class = "contact-bg">
