--- a/request.html
+++ b/request.html
@@ -67,31 +67,79 @@
             <!--<img src="/img/cooking.jpg"> -->
         </div>
         <div class="request-fields">
-            <form>
-                <input type="text" id="name" placeholder="Your Name"/><br>
-                <input type="text" id="houseno" placeholder="Your House No."/><br>
-                <select id="work-tbd">
+            <form method="POST">
+                <input type="text" id="name" placeholder="Your Name" name="Name"><br>
+                <input type="text" id="houseno" placeholder="Your House No."/ name="HouseNo"><br>
+                <select id="work-tbd" name="WorkType">
                     <option>Cooking</option>
                     <option>Washing</option>
                     <option>Cleaning</option>
                 </select><br>
-                <select id="time">
+                <select id="time" name="Time">
                     <option>8.00 - 9.00am</option>
                     <option>9.00 - 10.00am</option>
                     <option>10.00 - 11.00am</option>
                 </select><br>
-                <input type="number" id="payment" placeholder="You want to pay"/><br>
-                
+                <input type="number" id="payment" placeholder="You want to pay" name="Pay" /><br>
+                <input type="submit" class="sub" value="Submit" /> <br>
             </form>
-            <button class="sub">
-                Submit
-            </button><br>
         </div>
     </body>
     <!-- SCRIPTS -->
-    <script src="lib/jquery.slim.min.js"></script> 
+    <script src="lib/jquery.min.js"></script> 
     <script src="lib/bootstrap.bundle.min.js"></script>
     <script src="lib/active-block.js"></script>
     <script src="lib/navbar.js"></script>
-    <script src="lib/request.js"></script>
+    <!--<script id="source" src="lib/request.js"></script> -->
+    <script>
+        $(document).ready(function(){
+            //alert("Jquery is working");
+            displayFromDatabase();
+            $(".sub").click(function(){
+                var name=$("#name").val();
+                var houseno=$("#houseno").val();
+                var worktype=$("#work-tbd").val();
+                var time=$("#time").val();
+                var pay=$("#payment").val();
+
+                $.ajax({
+                    url:"ajax.php",
+                    type:"POST",
+                    async:false,
+                    data:{
+                        "clicked-submit":1,
+                        "Name":name,
+                        "House":houseno,
+                        "WorkType":worktype,
+                        "Time":time,
+                        "Pay":pay
+                    },
+                    success: function(data){
+                        displayFromDatabase();
+                        $("#name").val('');
+                        $("#houseno").val('');
+                        $("#work-tbd").val('');
+                        $("#time").val('');
+                        $("#payment").val('s');
+
+                    }
+                });
+            });
+        });
+
+        function displayFromDatabase(){
+            $.ajax({
+                url:"ajax.php",
+                type:"POST",
+                async:false,
+                data:{
+                    "display":1
+                },
+                success:function(d){
+                    $(".existing-requests").html(d);
+                }
+            })
+        }
+
+    </script>
 </html>
